# Auto-CORPus

./: .codespell_ignore.txt  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_app.py  run_app_2.py  run_images.py  run_table_images.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: auto-merge.yml  ci.yml  docs.yml  main.yml  release.yml
Html/: PMC1512523.html  PMC1852701.html  PMC1950819.html  PMC1965486.html  PMC1991296.html  PMC2234194.html  PMC2253968.html  PMC2253977.html  PMC2274985.html  PMC2276142.html  PMC2276347.html  PMC2278047.html  PMC2393811.html  PMC2398737.html  PMC2427174.html  PMC2427208.html  PMC2427267.html  PMC2427311.html  PMC2427318.html  PMC2430596.html  PMC2492393.html  PMC2507863.html  PMC2515139.html  PMC2527618.html  PMC2538550.html  PMC2556434.html  PMC2561937.html  PMC2574810.html  PMC2581605.html  PMC2587162.html  PMC2605611.html  PMC2613843.html  PMC2627511.html  PMC2628541.html  PMC2629209.html  PMC2629486.html  PMC2630707.html  PMC2635556.html  PMC2636867.html  PMC2638782.html  (+1212 more)
Tests/OutputTests/: OutputDifference.py  QuickComparison.py
Tutorial/: config_tutorial.md  configs_guide.md  configs_tutorial.md  data_elements.md
Tutorial/abbreviations/: PMC4827154_abbreviations.json
Tutorial/maintext/: PMC4827154_maintext.json
Tutorial/tables/: PMC4827154_tables.json
autocorpus/: Autocorpus.py  BioCTable.py  __init__.py  __main__.py  abbreviation.py  autoCORPus.py  autocorpus.py  bioc_documents.py  bioc_formatter.py  bioc_passage.py  bioc_passages.py  bioc_supplementary.py  config.py  data_structures.py  excel_extractor.py  file_processing.py  file_type.py  html.py  inputs.py  parse_xml.py  pdf.py  pdf_extractor.py  powerpoint_extractor.py  reference.py  references.py  run.py  section.py  spreadsheet.py  spreadsheet_extractor.py  supplementary_processor.py  table.py  table_image.py  tableimage.py  utils.py  word.py  word_extractor.py  word_processing.py
autocorpus/IAO_dicts/: IAO_FINAL_MAPPING.txt  IAO_term_to_ID.txt
autocorpus/ac_bioc/: __init__.py  annotation.py  collection.py  decoder.py  document.py  json.py  location.py  node.py  passage.py  relation.py  sentence.py
autocorpus/ac_bioc/bioctable/: cell.py  collection.py  document.py  json.py  passage.py
autocorpus/bioc/: __init__.py  annotation.py  collection.py  decoder.py  document.py  encoder.py  json.py  key.py  location.py  node.py  passage.py  relation.py  sentence.py  xml.py
autocorpus/bioc/bioctable/: __init__.py  cell.py  collection.py  document.py  encoder.py  json.py  passage.py
autocorpus/bioctable/: BioCTableCell.py  BioCTableCollection.py  BioCTableDocument.py  BioCTableJSONEncoder.py  BioCTablePassage.py  __init__.py  collection.py  document.py  encoder.py  passage.py
autocorpus/configs/: __init__.py  config_pmc.json  config_pmc_pre_oct_2024.json  default_config.py
config_creator/: background.js  content.js  manifest.json  manifest_firefox.json  sidebar.html  sidebar.js  style.css
configs/: config_american_journal_of_human_genetics.json  config_american_journal_of_medical_genetics.json  config_biological_psychiatry.json  config_frontiers_in_genetics.json  config_gastroenterology.json  config_human_genetics.json  config_mdpi_metabolite.json  config_nature_communications.json  config_nature_genetics.json  config_nature_genetics_new.json  config_plos_genetics.json  config_plos_genetics_new.json  config_pmc.json  config_pmc_new.json  config_template.json  config_the_journal_of_allergy_and_clinical_immunology.json  configs_guide.md  data_elements.md  new_config_pmc.json
docs/: .gitignore  config_tutorial.md  data_elements.md  gen_ref_nav.py  index.md  io.md  package_workflows.md
docs/stylesheets/: extra.css
keyFiles/: autocorpus_abbreviations.key  autocorpus_fulltext.key  autocorpus_tables.key  schema.json  table_schema.json
pathTest/: PMC4827154.html
problemChildren/: Early Progression of Diabetic Nephropathy Correlates With Methylglyoxal-Derived Advanced Glycation End Products.html  PMC1271381.html  PMC2696643.html  PMC2714974.html  PMC2883723.html  PMC2900429.html  PMC3072760.html  PMC3244938.html  PMC3277617.html  PMC3280918.html  PMC3690340.html  PMC3746703.html  PMC3756935.html  PMC4129543.html  PMC4426827.html  PMC4537185.html  PMC4573240.html  PMC4854022.html  PMC5426060.html  PMC5544392.html  PMC6014560.html  problems.txt
src/: AutoCorpus.py  DAG_model.graphml  abbreviation.py  autoCORPus.py  bioc_documents.py  bioc_formatter.py  bioc_passages.py  excel_extractor.py  file_extension_analysis.py  paragraph.py  pdf_extractor.py  references.py  section.py  supplementary_processor.py  table.py  table_image.py  tableimage.py  utils.py  word_extractor.py
src/IAO_dicts/: IAO_FINAL_MAPPING.txt  IAO_term_to_ID.txt
tests/: __init__.py  conftest.py  quick_comparison.py  test_abbreviation.py  test_file_type.py  test_reference.py  test_references.py  test_regression.py  test_schema.py
tests/bioc/: test_collection.py  test_document.py
tests/data/: .gitignore  PMC8885717.html  PMC8885717_abbreviations.json  PMC8885717_bioc.json  PMC8885717_tables.json  README.md
tests/data/PMC/Current/: PMC8885717_abbreviations.json  PMC8885717_bioc.json  PMC8885717_tables.json
tests/data/PMC/Pre-Oct-2024/: PMC8885717_abbreviations.json  PMC8885717_bioc.json  PMC8885717_tables.json
tests/data/PMC/xml/: PMC8885717.xml  PMC8885717_bioc.json
tests/data/Supplementary/Excel/: Data_Sheet_1.xlsx
tests/data/Supplementary/PDF/: tp-10-08-2123-coif.pdf_bioc.json  tp-10-08-2123-coif.pdf_tables.json
tests/data/Supplementary/Word/: mmc1.doc
tests/data/Supplementary/Word/Expected Output/: mmc1.doc_bioc.json
tests/data/html/PMC/: PMC8885717.html  PMC8885717_tables.json
tests/references/: reference_data.py  test_references.py
trainedData/: all.traineddata  num.traineddata  sym.traineddata
(+10 files in other folders)
