[tool.poetry]
name = "src"
version = "1.0.0"
description = "A tool to standardise text and table data extracted from full text publications."
authors = [
    "Tim Beck <tim.beck@nottingham.ac.uk>",
    "Joram Matthias Posma <j.posma11@imperial.ac.uk>",
]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
regex = "^2024.9.11"
bioc = "^2.1"
beautifulsoup4 = "^4.12.3"
nltk = "^3.9.1"
fuzzywuzzy = "^0.18.0"
pytesseract = "^0.3.13"
lxml = "^5.3.0"
networkx = "^3.4.2"
opencv-contrib-python = "^4.10.0.84"
python-levenshtein = "^0.26.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.7.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
mkdocs-material = "^9.5.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=src --cov-report=html --doctest-modules --ignore=run_app.py"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pylint
]
ignore = [
    "E501",   # line too long
    "RUF001", # ambiguous multiplication sign
    "RUF003", # ambiguous fullwidth colon
]
