[tool.poetry]
name = "autocorpus"
version = "1.1.0"
description = "A tool to standardise text and table data extracted from full text publications."
authors = [
    "Tim Beck <tim.beck@nottingham.ac.uk>",
    "Joram Matthias Posma <j.posma11@imperial.ac.uk>",
    "Antoine Lain <a.lain@imperial.ac.uk>",
    "Thomas Rowlands <thomas.rowlands@nottingham.ac.uk>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/omicsNLP/Auto-CORPus"
documentation = "https://omicsnlp.github.io/Auto-CORPus/"
keywords = [
    "natural language processing",
    "text mining",
    "biomedical literature",
    "semantics",
    "health data",
]
classifiers = ["Intended Audience :: Science/Research"]

[tool.poetry.urls]
"Publication" = "https://doi.org/10.3389/fdgth.2022.788124"

[tool.poetry.scripts]
auto-corpus = "autocorpus.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<4"
regex = "^2024.9.11"
bioc = "^2.1"
beautifulsoup4 = "^4.12.3"
nltk = "^3.9.1"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = ">=5,<7"
pytest-mock = "^3.14.0"
ruff = ">=0.7.1,<0.12.0"
pre-commit = "^4.2.0"
jsonschema = "^4.23.0"
mypy = "^1.15.0"
types-beautifulsoup4 = "^4.12.0.20250204"
types-regex = "^2024.11.6.20250318"
lxml-stubs = "^0.5.1"
types-tqdm = "^4.67.0.20250319"
types-jsonschema = "^4.23.0.20241208"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = ">=0.26.2,<0.30.0"
mkdocstrings-python = "^1.12.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
mkdocs-material = "^9.5.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
# disallow_untyped_defs = true
exclude = [".venv/", "docs/", "autocorpus/parse_xml.py", "site/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["nltk.*", "fuzzywuzzy.*", "bioc.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=autocorpus --cov-branch --cov-report=xml --cov-report=html --doctest-modules --ignore=docs/ --ignore=site/"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pylint
]
ignore = [
    "E501",   # line too long
    "RUF001", # ambiguous multiplication/minus/en dash sign
]
pydocstyle.convention = "google"
